fixed view garments in categories, now they are wrap

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -128,16 +128,17 @@ body {
 }
 
 .cart{
-    width: 20%;
-    
-    background-color: rgba(219, 235, 228, 0.178);
+    width: 227px;
+    margin: 47px;
+}
+
+.cart p {
+    color: #e6e6e6;
 }
 
 .listCards{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 4pc 0 7pc 0;
+    flex-wrap: wrap;
 
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -147,7 +148,7 @@ body {
     align-items: center;
     justify-content: center;
 
-    background: #303030;
+    background: #434343;
     text-decoration: none;
     color: rgb(233, 222, 222);
 
@@ -164,7 +165,7 @@ body {
 
 #titleForm{
     height: 4em;
-    background-color: #f0f0f0;
+    background-color: #757575;
     margin: 0;
 }
 
@@ -183,13 +184,18 @@ body {
     background-color: #474747;
     display: flex;
     flex-direction: column;
+
     margin: 7pc;
     padding: 78px;
 }
 
+.garmentInfo{
+
+}
+
 .garmentImg{
-    width: 100%;
-    height: 34pc;
+    width: 600px;
+    height: 400px;
 }
 
 .logButtons{
